// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Textarea Content Density - cozy and compact 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-1"
    >
      Text area(cozy):
    </label>
    
    
    <textarea
      class="fd-textarea"
      id="textarea-1"
      placeholder="Write something here"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label fd-form-label--compact"
      for="textarea-123"
    >
      Text area(compact):
    </label>
    
    
    <textarea
      class="fd-textarea fd-textarea--compact"
      id="textarea-123"
      placeholder="Write something here"
    />
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Forms/Textarea Counter 1`] = `


`;

exports[`Storyshots Components/Forms/Textarea Disabled And Read Only 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-7"
    >
      Text area:
    </label>
    
    
    <textarea
      class="fd-textarea"
      disabled=""
      id="textarea-7"
    >
      Disabled textarea
    </textarea>
    

  </div>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-8"
    >
      Text area:
    </label>
    
    
    <textarea
      class="fd-textarea"
      id="textarea-8"
      readonly=""
    >
      Read Only textarea
    </textarea>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Forms/Textarea Responsiveness 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-3"
    >
      Success text area:
    </label>
    
    
    <div
      class="fd-popover fd-popover--input-message-group"
    >
      
        
      <div
        aria-controls="popoverT51"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
            
        <textarea
          class="fd-textarea is-success"
          id="textarea-3"
          placeholder="Write something here"
        />
        
        
      </div>
      
        
      <div
        aria-hidden="true"
        class="fd-popover__body fd-popover__body--no-arrow"
        id="popoverT51"
      >
        
            
        <div
          class="fd-form-message fd-form-message--success"
        >
          Success message
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-textarea-counter"
    >
      150 characters left
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-4"
    >
      Error text area:
    </label>
    
    
    <div
      class="fd-popover fd-popover--input-message-group"
    >
      
        
      <div
        aria-controls="popoverT52"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
            
        <textarea
          class="fd-textarea is-error"
          id="textarea-4"
          placeholder="Write something here"
        />
        
        
      </div>
      
        
      <div
        aria-hidden="true"
        class="fd-popover__body fd-popover__body--no-arrow"
        id="popoverT52"
      >
        
            
        <div
          class="fd-form-message fd-form-message--error"
        >
          Error message
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-5"
    >
      Warning text area:
    </label>
    
    
    <div
      class="fd-popover fd-popover--input-message-group"
    >
      
        
      <div
        aria-controls="popoverT53"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
            
        <textarea
          class="fd-textarea is-warning"
          id="textarea-5"
          placeholder="Write something here"
        />
        
        
      </div>
      
        
      <div
        aria-hidden="true"
        class="fd-popover__body fd-popover__body--no-arrow"
        id="popoverT53"
      >
        
            
        <div
          class="fd-form-message fd-form-message--warning"
        >
          Warning message
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="textarea-6"
    >
      Information text area:
    </label>
    
    
    <div
      class="fd-popover fd-popover--input-message-group"
    >
      
        
      <div
        aria-controls="popoverT54"
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
            
        <textarea
          class="fd-textarea is-information"
          id="textarea-6"
          placeholder="Write something here"
        />
        
        
      </div>
      
        
      <div
        aria-hidden="true"
        class="fd-popover__body fd-popover__body--no-arrow"
        id="popoverT54"
      >
        
            
        <div
          class="fd-form-message fd-form-message--information"
        >
          Information message
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;
